tester/testsuite/extensions/arrays1/bad/bad002.jl
/* length not of integer type */

void main() {
	int[] array = new int["x"];
}
